# mupen64plus-input-gcn

./: .gitignore  CMakeLists.txt  README.md  config.c  config.h  gc_adapter.c  gc_adapter.h  log.c  log.h  main.c  main.h  mapping.c  mapping.h  util.h
